# scrutiny-chain

./: .gitignore  Cargo.toml  Maekfile  README.md
.devcontainer/: devcontainer.json
crates/api-server/: Cargo.toml
crates/api-server/src/: handlers.rs  main.rs  routes.rs
crates/blockchain-core/: Cargo.toml  Makefile
crates/blockchain-core/src/: blockchain.rs  lib.rs  main.rs  models.rs
crates/common/: Cargo.toml  Makefile
crates/common/src/: async_utils.rs  calculator.rs  error.rs  lib.rs  logging.rs  types.rs  utils.rs
crates/scrutiny_chain_api_server/: Cargo.toml  Makefile
crates/scrutiny_chain_api_server/src/: handlers.rs  main.rs  routes.rs
crates/scrutiny_chain_blockchain_core/: Cargo.toml  README.md
crates/scrutiny_chain_blockchain_core/src/: blockchain.rs  lib.rs  main.rs  models.rs
crates/scrutiny_chain_common/: Cargo.toml  README.md
crates/scrutiny_chain_common/src/: async_utils.rs  error.rs  logging.rs  types.rs  utils.rs
crates/scrutiny_chain_security_analyzer/: Cargo.toml
crates/scrutiny_chain_security_analyzer/src/: analysis.rs  lib.rs  vulnerabilities.rs
crates/scrutiny_chain_transaction_analyzers/: Cargo.toml  Makefile
crates/scrutiny_chain_transaction_analyzers/src/: lib.rs  ml.rs  processor.rs
crates/security-analyzer/: Cargo.toml  Makefile
crates/security-analyzer/src/: analysis.rs  vulnerabilities.rs
crates/transaction-analyzer/: Cargo.toml
crates/transaction-analyzer/src/: lib.rs  ml.rs  processor.rs
