[workspace]
members = [
    "crates/blockchain-core",
    "crates/security-analyzer",
    "crates/transaction-analyzer",
    "crates/api-server",
    "crates/common"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["robert@fischer3.net"]
description = "AI-Enhanced Blockchain Security Analysis Platform"
repository = "https://github.com/robertfischer3/scrutiny-chain"
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.28", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web Framework
actix-web = "4.2"

# Database
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
thiserror = "2.0.11"

# Async Traits
async-trait = "0.1.85"

# Utils
hex = "0.4.3"