[workspace]
members = [
    "crates/scrutiny_chain_blockchain_core",
    "crates/scrutiny_chain_security_analyzer",
    "crates/scrutiny_chain_transaction_analyzers",
    "crates/scrutiny_chain_api_server",
    "crates/scrutiny_chain_common",

]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["robert@fischer3.net"]
description = "AI-Enhanced Blockchain Security Analysis Platform"
repository = "https://github.com/robertfischer3/scrutiny-chain"
license = "MIT"
readme = "README.md"
keywords = ["blockchain", "security", "analysis", "smart-contract"]
categories = ["cryptography", "blockchain", "security-tools"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web Framework
actix-web = "4.9"

# Database
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
thiserror = "2.0.11"

# Async Traits
async-trait = "0.1.86"

# Utils
hex = "0.4.3"
