[package]
name = "api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blockchain-core = { path = "../blockchain-core" }
security-analyzer = { path = "../security-analyzer" }
transaction-analyzer = { path = "../transaction-analyzer" }
common = { path = "../common" }
actix-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }