[package]
name = "blockchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core blockchain functionality and traits"

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"