[package]
name = "scrutiny_chain_blockchain_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core blockchain functionality and traits"

[dependencies]
scrutiny_chain_common = { path = "../scrutiny_chain_common" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
