[package]
name = "scrutiny_chain_blockchain_core"
description = "AI-Enhanced Blockchain Security Analysis Platform Core Blockchain Functionality"
repository = "https://github.com/robertfischer3/scrutiny-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
scrutiny_chain_common = { path = "../scrutiny_chain_common", version = "0.1.1" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
