[package]
name = "scrutiny_chain_common"
description = "AI-Enhanced Blockchain Security Analysis Platform Common Library"
repository = "https://github.com/robertfischer3/scrutiny-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Logging dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio-test = "0.4"

