[package]
name = "transaction-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blockchain-core = { path = "../blockchain-core" }
common = { path = "../common" }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }